--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-custom-roulette",
-  "version": "1.4.1",
+  "name": "react-custom-roulette-r19",
+  "version": "2.0.3",
   "description": "Customizable React roulette wheel with spinning animation",
   "main": "./dist/bundle.js",
   "repository": {
@@ -20,8 +20,8 @@
   "types": "./dist/index.d.ts",
   "private": false,
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": ">=18.2.0 <20.0.0 || ^19.0.0",
+    "react-dom": ">=18.2.0 <20.0.0 || ^19.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.9.0",
@@ -29,8 +29,8 @@
     "@testing-library/user-event": "^11.0.0",
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.9",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "react": ">=18.2.0 <20.0.0 || ^19.0.0",
+    "react-dom": ">=18.2.0 <20.0.0 || ^19.0.0",
     "@types/webfontloader": "^1.6.34",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
